--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "core-js": "^3.12.1",
@@ -42,6 +43,7 @@
     "pug": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "regenerator-runtime": "^0.13.7",
     "yup": "^0.32.11"
