--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -33,3 +33,4 @@ rules:
   functional/no-try-statement: 0
   functional/no-throw-statement: 0
   no-param-reassign: 0
+  max-len: ["error", { "code": 120 }]
