--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "@rollbar/react": "^0.9.0",
     "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
