--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ root: true
 
 plugins:
   - functional
+  - react-hooks
 
 extends:
   - airbnb
@@ -33,4 +34,4 @@ rules:
   functional/no-try-statement: 0
   functional/no-throw-statement: 0
   no-param-reassign: 0
-  max-len: ["error", { "code": 120 }]
+  react-hooks/rules-of-hooks: 'error'
