--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "@rollbar/react": "^0.9.0",
     "axios": "^0.24.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
@@ -47,11 +48,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.3",
+    "react-i18next": "^11.15.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-toastify": "^8.1.0",
     "regenerator-runtime": "^0.13.7",
+    "rollbar": "^2.24.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "yup": "^0.32.11"
