--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -34,4 +34,5 @@ rules:
   functional/no-try-statement: 0
   functional/no-throw-statement: 0
   no-param-reassign: 0
+  max-len: ["error", { "code": 110 }]
   react-hooks/rules-of-hooks: 'error'
